[package]
name = "tanks"
version = "0.1.0"
authors = ["RedlineTriad <39059512+RedlineTriad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0" # make sure this is the latest version